--- a/templates/dumps.html
+++ b/templates/dumps.html
@@ -12,20 +12,20 @@
 
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1>Explore Available Test Dumps</h1>
+                <h1>Explore Test Dumps</h1>
             </div>
             <div class="sidebar-items">
                 <ul>
-                    <li><a href="{{url_for('variety')}}">QUIZ</a></li>
+                    <li><a href="{{ url_for('variety') }}">QUIZ</a></li>
                     <li><a href="#">RESULTS</a></li>
                     <li><a href="#">RATE US</a></li>
-                    <li><a href="{{url_for('logout')}}">LOG OUT</a></li>
+                    <li><a href="{{ url_for('logout') }}">LOG OUT</a></li>
                 </ul>
             </div>
             <div class="social-links">
-                <a href="#" target="_blank"><img src="{{url_for('static', filename='images/facebook-icon.png')}}" alt="Facebook"></a>
-                <a href="#" target="_blank"><img src="{{url_for('static', filename='images/twitter-icon.png')}}" alt="Twitter"></a>
-                <a href="#" target="_blank"><img src="{{url_for('static', filename='images/linkedin-icon.png')}}" alt="LinkedIn"></a>
+                <a href="#" target="_blank"><img src="{{ url_for('static', filename='images/facebook-icon.png') }}" alt="Facebook"></a>
+                <a href="#" target="_blank"><img src="{{ url_for('static', filename='images/twitter-icon.png') }}" alt="Twitter"></a>
+                <a href="#" target="_blank"><img src="{{ url_for('static', filename='images/linkedin-icon.png') }}" alt="LinkedIn"></a>
             </div>
         </aside>
 
@@ -36,20 +36,25 @@
                 <a href="{{url_for('variety')}}" class="return-back-button">&#171;&#171;Go Back</a>
             </div>
 
-            <div class="container">
-                <ul class="dump-list">
-                    {% for dump in dumps %}
-                        <li class="dump-item">
-                            <div class="dump-info">
-                                <h3>{{ dump.title }}</h3>
-                                <p class="dump-description">{{ dump.description }}</p>
-                                <p class="num_dumps">{{ dump.num_dumps }}</p>
-                            </div>
-                            <a href="{{ url_for('select_quiz', selected_quiz=dump.category) }}" class="play-button">Play Quiz</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+            <div class="dumps-container">
+                {% for dump_list in dump_lists %}
+                    <div class="dump-list-container">
+                        <ul class="dump-list">
+                            {% for dump in dump_list %}
+                                <li class="dump-item">
+                                    <div class="dump-info">
+                                        <h3>{{ dump.title }}</h3>
+                                        <p class="dump-description">{{ dump.description }}</p>
+                                        <p class="num_dumps">Number of Dumps: {{ dump.num_dumps }}</p>
+                                    </div>
+                                    <a href="{{ url_for('select_quiz', selected_quiz=dump.category) }}" class="play-button">Play Quiz</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endfor %}
             </div>
+
         </main>
 
     </div>
@@ -57,5 +62,3 @@
 </body>
 
 </html>
-
-
